--- a/button.html
+++ b/button.html
@@ -19,8 +19,8 @@
 
         #follow {
             background-color: #dedede;
-            background: url(/forrst-logo.png) 5px center no-repeat;
-            background: url(/forrst-logo.png) 5px center no-repeat, -webkit-linear-gradient(#fff, #dedede);
+            background: url(/media/forrst-logo.png) 5px center no-repeat;
+            background: url(/media/forrst-logo.png) 5px center no-repeat, -webkit-linear-gradient(#fff, #dedede);
             border: 1px solid #ccc;
             border-radius: 3px;
             color: #333;
