Add browser-specific gradient CSS

--- a/button.html
+++ b/button.html
@@ -18,9 +18,14 @@
         }
 
         #follow {
-            background-color: #dedede;
-            background: url(/media/forrst-logo.png) 5px center no-repeat;
+            background-color: #eee;
+            background: #eee url(/media/forrst-logo.png) 5px center no-repeat;
+            background: url(/media/forrst-logo.png) 5px center no-repeat, -webkit-gradient(linear, left top, left bottom, from(#fff), to(#dedede));
             background: url(/media/forrst-logo.png) 5px center no-repeat, -webkit-linear-gradient(#fff, #dedede);
+            background: url(/media/forrst-logo.png) 5px center no-repeat,    -moz-linear-gradient(#fff, #dedede);
+            background: url(/media/forrst-logo.png) 5px center no-repeat,     -ms-linear-gradient(#fff, #dedede);
+            background: url(/media/forrst-logo.png) 5px center no-repeat,      -o-linear-gradient(#fff, #dedede);
+            background: url(/media/forrst-logo.png) 5px center no-repeat,         linear-gradient(#fff, #dedede);
             border: 1px solid #ccc;
             border-radius: 3px;
             color: #333;
@@ -37,7 +42,7 @@
         }
 
         #counter {
-            background-color: #fff;
+            background-color: #dedede;
             border: 1px solid #ccc;
             border-radius: 3px;
             color: #333;
