Change count background back to white

--- a/button.html
+++ b/button.html
@@ -42,7 +42,7 @@
         }
 
         #counter {
-            background-color: #dedede;
+            background-color: #fff;
             border: 1px solid #ccc;
             border-radius: 3px;
             color: #333;
