--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
     </section>
 
-    <p id="open-source">Forrst button project is open source. You can <a href="">browse the code and contribute on GitHub</a>.</p>
+    <p id="open-source">Forrst button project is open source. You can <a href="https://github.com/PawelDecowski/forrst-button">browse the code and contribute on GitHub</a>.</p>
 
     <footer>
         <p>©2013 <a href="http://twitter.com/PawelDecowski">Pawel Decowski</a></p>
